Fix button issue on mobile

--- a/www/assets/style.scss
+++ b/www/assets/style.scss
@@ -410,6 +410,7 @@ nav a.active {
   border-color: #143ff4;
   border-style: solid;
   cursor: pointer;
+  display: block;
 }
 
 .signup-button h3 {
